# dtu_mlops_seabed_object_classification

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  sweep.yaml
.dvc/: config
.github/workflows/: build_trainer.yaml  test.yaml
data/raw/: .gitignore  seabed_dataset.zip.dvc
dockerfiles/: deploy_model_app.dockerfile  predict_model.dockerfile  train_model.dockerfile  wandb.docker
docs/: mkdocs.yaml
docs/source/: index.md
dtu_mlops_team94/: app.py  predict_model.py  train_model.py
dtu_mlops_team94/conf/: config.yaml
dtu_mlops_team94/conf/deployment/: basic.yaml
dtu_mlops_team94/conf/experiment/: experiment0.yaml  experiment1.yaml
dtu_mlops_team94/conf/project/: dtumlops.yaml
dtu_mlops_team94/data/: make_dataset.py  samplers_factory.py  seabed_dataset.py
dtu_mlops_team94/models/: model.py
dtu_mlops_team94/utils/: env.py  gcp.py
reports/: README.md  report.html
tests/: test_data.py
